Add Nanojit configuration flags (such as --sse) to lirasm. (bug 526974, r=nnethercote)

--HG--
extra : convert_revision : baa27feb8fb4fdaf1ecb0839c4bd468e83da2aeb